fix team page fund details section mobile view

--- a/components/page/team-details/TeamInvestorDetails/TeamInvestorDetails.module.scss
+++ b/components/page/team-details/TeamInvestorDetails/TeamInvestorDetails.module.scss
@@ -1,6 +1,14 @@
+@use 'styles/media';
+
 .content {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+  grid-template-columns: 1fr;
+  gap: 12px;
+  align-items: flex-start;
+
+  @include media.tablet-landscape {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 .addPill {
